# spaceid-py

./: .gitignore  README.md  pyproject.toml
src/spaceid_py/: __init__.py  core.py  metadata.py
tests/: test1.py
